--- a/week6/breakout/package.json
+++ b/week6/breakout/package.json
@@ -10,7 +10,9 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.15.2",
+    "cheerio": "^0.20.0",
     "express": "^4.14.0",
-    "morgan": "^1.7.0"
+    "morgan": "^1.7.0",
+    "request": "^2.74.0"
   }
 }
